First controller and Razor pages tests

--- a/Corrente/Views/Home/About.cshtml
+++ b/Corrente/Views/Home/About.cshtml
@@ -1,7 +1,12 @@
 ﻿@{
+
+    //C#
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<address>
+    <strong> For more information, contact @ViewData["email"]</strong>
+</address>
