Simple Create form

--- a/Corrente/Views/Instituicoes/Index.cshtml
+++ b/Corrente/Views/Instituicoes/Index.cshtml
@@ -5,14 +5,15 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="success">
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Pontuacao)
@@ -35,9 +36,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Pontuacao)
