InstituicaoFormViewModel and TipoInstituicao select component

--- a/Corrente/Views/Instituicoes/Create.cshtml
+++ b/Corrente/Views/Instituicoes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Corrente.Models.Instituicao
+﻿@model Corrente.Models.ViewModels.InstituicaoFormViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -11,24 +11,28 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
+                <label asp-for="Instituicao.Nome" class="control-label"></label>
+                <input asp-for="Instituicao.Nome" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
+                <label asp-for="Instituicao.Descricao" class="control-label"></label>
+                <input asp-for="Instituicao.Descricao" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Pontuacao" class="control-label"></label>
-                <input asp-for="Pontuacao" class="form-control" />
+                <label asp-for="Instituicao.Pontuacao" class="control-label"></label>
+                <input asp-for="Instituicao.Pontuacao" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="DtCadastro" class="control-label"></label>
-                <input asp-for="DtCadastro" class="form-control" />
+                <label asp-for="Instituicao.DtCadastro" class="control-label"></label>
+                <input asp-for="Instituicao.DtCadastro" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Telefone" class="control-label"></label>
-                <input asp-for="Telefone" class="form-control" />
+                <label asp-for="Instituicao.Telefone" class="control-label"></label>
+                <input asp-for="Instituicao.Telefone" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Instituicao.TipoInstituicaoId" class="control-label"></label>
+                <select asp-for="Instituicao.TipoInstituicaoId" asp-items="@(new SelectList(Model.TipoInstituicoes, "Id", "Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default"/>
