Preparing sales search navigation views

--- a/Corrente/Views/Shared/_Layout.cshtml
+++ b/Corrente/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="TiposInstituicoes" asp-action="Index">Tipos de Instituições</a></li>
                     <li><a asp-area="" asp-controller="Instituicoes" asp-action="Index">Instituições</a></li>
+                    <li><a asp-area="" asp-controller="Doacaos" asp-action="Index">Doações</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
