--- a/Corrente/Views/Doacaos/GroupingSearch.cshtml
+++ b/Corrente/Views/Doacaos/GroupingSearch.cshtml
@@ -1,7 +1,75 @@
-﻿
+﻿@model IEnumerable<IGrouping<TipoInstituicao, Doacao>>
+
 @{
     ViewData["Title"] = "Grouping Search";
+    DateTime minDate = DateTime.Parse(ViewData["minDate"] as string);
+    DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
 }
 
 <h2>@ViewData["Title"]</h2>
 
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate">Min Date</label>
+                    <input type="date" class="form-control" name="minDate" value=@ViewData["minDate"]>
+                </div>
+                <div class="form-group">
+                    <label for="maxDate">Max Date</label>
+                    <input type="date" class="form-control" name="maxDate" value=@ViewData["maxDate"]>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Filter</button>
+        </form>
+    </div>
+</nav>
+
+@foreach (var tipoInstituicaoGroup in Model)
+{
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">TipoInstituicao @tipoInstituicaoGroup.Key.Name, Total de doacoes = 130</h3>
+        </div>
+        <div class="panel-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr class="success">
+                        <th>
+                            DtCriada
+                        </th>
+                        <th>
+                            DtRealizada
+                        </th>
+                        <th>
+                            Status
+                        </th>
+                        <th>
+                            Instituicao
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in tipoInstituicaoGroup)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DtCriada)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DtRealizada)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Status)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Instituicao.Nome)
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+}
