--- a/Corrente/Views/Shared/_Layout.cshtml
+++ b/Corrente/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
                     <li><a asp-area="" asp-controller="Doacaos" asp-action="Index">Doações</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Login" asp-action="Index">Entrar</a></li>
+                    <li><a asp-area="" asp-controller="Register" asp-action="Index">Cadastrar</a></li>
                 </ul>
             </div>
         </div>
